// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChecklistOverviewDialog > renders correctly 1`] = `
<div
  data-v-76562fab=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-76562fab=""
    iconcolor="lw-green"
    id="dialog-toolbar"
    title="Checklists"
    titleicon="M14 10H3V12H14V10M14 6H3V8H14V6M3 16H10V14H3V16M21.5 11.5L23 13L16 20L11.5 15.5L13 14L16 17L21.5 11.5Z"
  />
  <v-card-text-stub
    class="py-0"
    data-v-76562fab=""
    tag="div"
  >
    <generic-tabs-row-stub
      color=""
      data-v-76562fab=""
      disabledrulefunc="[Function]"
      grow="false"
      height="48"
      items="[object Object],[object Object],[object Object],[object Object],[object Object]"
      labelkey="name"
      modelvalue="0"
      notclickable="false"
      sizeclass=""
      tabnamefn="[Function]"
    />
    <!--v-if-->
    <shiftview-cards-list-stub
      additionallineprops="[object Object]"
      bordercolorkey="borderColor"
      class="card-list mx-n4 px-4 pt-4"
      data-v-76562fab=""
      dense="false"
      disabled="false"
      iconcolorfn="[Function]"
      iconfn="[Function]"
      id="checklists-items-list"
      items="[object Object]"
      primaryactionicon="[Function]"
      primaryactiontext="[Function]"
      primaryactiontooltip="Edit"
      secondaryactionicon="[Function]"
      secondaryactiontooltip="Delete"
      selectable="true"
      subtitleitemsprops="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
      tertiaryactionicon=""
      tertiaryactiontooltip=""
      titleiconfn="[Function]"
      titletextkey="name"
      verticalsubtitle="false"
    />
  </v-card-text-stub>
  <v-card-actions-stub
    class=""
    data-v-76562fab=""
    tag="div"
  >
    <evocon-v-button-stub
      class="mr-4"
      color=""
      data-v-76562fab=""
      icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
      iconcolor=""
      id="add-manual-checklist"
      text="Checklist"
      textclass=""
      type="primary-light"
    />
    <v-spacer-stub
      data-v-76562fab=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-76562fab=""
      icon=""
      iconcolor=""
      id="overview-close-btn"
      text="Close"
      textclass=""
      type="secondary"
    />
  </v-card-actions-stub>
</div>
`;

exports[`ChecklistOverviewDialog > renders correctly for read only user 1`] = `
<div
  data-v-76562fab=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-76562fab=""
    iconcolor="lw-green"
    id="dialog-toolbar"
    title="Checklists"
    titleicon="M14 10H3V12H14V10M14 6H3V8H14V6M3 16H10V14H3V16M21.5 11.5L23 13L16 20L11.5 15.5L13 14L16 17L21.5 11.5Z"
  />
  <v-card-text-stub
    class="py-0"
    data-v-76562fab=""
    tag="div"
  >
    <generic-tabs-row-stub
      color=""
      data-v-76562fab=""
      disabledrulefunc="[Function]"
      grow="false"
      height="48"
      items="[object Object],[object Object],[object Object],[object Object],[object Object]"
      labelkey="name"
      modelvalue="0"
      notclickable="false"
      sizeclass=""
      tabnamefn="[Function]"
    />
    <!--v-if-->
    <shiftview-cards-list-stub
      additionallineprops="[object Object]"
      bordercolorkey="borderColor"
      class="card-list mx-n4 px-4 pt-4"
      data-v-76562fab=""
      dense="false"
      disabled="false"
      iconcolorfn="[Function]"
      iconfn="[Function]"
      id="checklists-items-list"
      items="[object Object]"
      primaryactionicon="[Function]"
      primaryactiontext="[Function]"
      primaryactiontooltip="View"
      secondaryactionicon="[Function]"
      secondaryactiontooltip="Delete"
      selectable="true"
      subtitleitemsprops="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
      tertiaryactionicon=""
      tertiaryactiontooltip=""
      titleiconfn="[Function]"
      titletextkey="name"
      verticalsubtitle="false"
    />
  </v-card-text-stub>
  <v-card-actions-stub
    class=""
    data-v-76562fab=""
    tag="div"
  >
    <!--v-if-->
    <v-spacer-stub
      data-v-76562fab=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-76562fab=""
      icon=""
      iconcolor=""
      id="overview-close-btn"
      text="Close"
      textclass=""
      type="secondary"
    />
  </v-card-actions-stub>
</div>
`;

exports[`ChecklistOverviewDialog > renders correctly in mobile view 1`] = `
<div
  data-v-76562fab=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-76562fab=""
    iconcolor="lw-green"
    id="dialog-toolbar"
    title="Checklists"
    titleicon="M14 10H3V12H14V10M14 6H3V8H14V6M3 16H10V14H3V16M21.5 11.5L23 13L16 20L11.5 15.5L13 14L16 17L21.5 11.5Z"
  />
  <v-card-text-stub
    class="py-0"
    data-v-76562fab=""
    tag="div"
  >
    <generic-tabs-row-stub
      color=""
      data-v-76562fab=""
      disabledrulefunc="[Function]"
      grow="false"
      height="40"
      items="[object Object],[object Object],[object Object],[object Object],[object Object]"
      labelkey="name"
      modelvalue="0"
      notclickable="false"
      sizeclass=""
      tabnamefn="[Function]"
    />
    <!--v-if-->
    <shiftview-cards-list-stub
      additionallineprops="[object Object]"
      bordercolorkey="borderColor"
      class="card-list mx-n4 px-4 pt-4 card-list--mobile"
      data-v-76562fab=""
      dense="true"
      disabled="false"
      iconcolorfn="[Function]"
      iconfn="[Function]"
      id="checklists-items-list"
      items="[object Object]"
      primaryactionicon="[Function]"
      primaryactiontext="[Function]"
      primaryactiontooltip="Edit"
      secondaryactionicon="[Function]"
      secondaryactiontooltip="Delete"
      selectable="true"
      subtitleitemsprops="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
      tertiaryactionicon=""
      tertiaryactiontooltip=""
      titleiconfn="[Function]"
      titletextkey="name"
      verticalsubtitle="false"
    />
  </v-card-text-stub>
  <v-card-actions-stub
    class="fullscreen-card-actions"
    data-v-76562fab=""
    tag="div"
  >
    <evocon-v-button-stub
      class="mr-4"
      color=""
      data-v-76562fab=""
      icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
      iconcolor=""
      id="add-manual-checklist"
      text="Checklist"
      textclass=""
      type="primary-light"
    />
    <v-spacer-stub
      data-v-76562fab=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-76562fab=""
      icon=""
      iconcolor=""
      id="overview-close-btn"
      text="Close"
      textclass=""
      type="secondary"
    />
  </v-card-actions-stub>
</div>
`;

exports[`ChecklistOverviewDialog > renders correctly in tablet 1`] = `
<div
  data-v-76562fab=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-76562fab=""
    iconcolor="lw-green"
    id="dialog-toolbar"
    title="Checklists"
    titleicon="M14 10H3V12H14V10M14 6H3V8H14V6M3 16H10V14H3V16M21.5 11.5L23 13L16 20L11.5 15.5L13 14L16 17L21.5 11.5Z"
  />
  <v-card-text-stub
    class="py-0"
    data-v-76562fab=""
    tag="div"
  >
    <generic-tabs-row-stub
      color=""
      data-v-76562fab=""
      disabledrulefunc="[Function]"
      grow="false"
      height="48"
      items="[object Object],[object Object],[object Object],[object Object],[object Object]"
      labelkey="name"
      modelvalue="0"
      notclickable="false"
      sizeclass=""
      tabnamefn="[Function]"
    />
    <!--v-if-->
    <shiftview-cards-list-stub
      additionallineprops="[object Object]"
      bordercolorkey="borderColor"
      class="card-list mx-n4 px-4 pt-4 card-list--tablet"
      data-v-76562fab=""
      dense="false"
      disabled="false"
      iconcolorfn="[Function]"
      iconfn="[Function]"
      id="checklists-items-list"
      items="[object Object]"
      primaryactionicon="[Function]"
      primaryactiontext="[Function]"
      primaryactiontooltip="Edit"
      secondaryactionicon="[Function]"
      secondaryactiontooltip="Delete"
      selectable="true"
      subtitleitemsprops="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
      tertiaryactionicon=""
      tertiaryactiontooltip=""
      titleiconfn="[Function]"
      titletextkey="name"
      verticalsubtitle="false"
    />
  </v-card-text-stub>
  <v-card-actions-stub
    class="fullscreen-card-actions"
    data-v-76562fab=""
    tag="div"
  >
    <evocon-v-button-stub
      class="mr-4"
      color=""
      data-v-76562fab=""
      icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
      iconcolor=""
      id="add-manual-checklist"
      text="Checklist"
      textclass=""
      type="primary-light"
    />
    <v-spacer-stub
      data-v-76562fab=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-76562fab=""
      icon=""
      iconcolor=""
      id="overview-close-btn"
      text="Close"
      textclass=""
      type="secondary"
    />
  </v-card-actions-stub>
</div>
`;
